# marinara

./: .drone.yml  Cargo.toml
src/: main.rs
