[package]
name = "marinara"
version = "0.2.0"
authors = ["Douglas Campos <qmx@qmx.me>"]
description = "a cli-based pomodoro timer"
homepage = "https://github.com/qmx/marinara"
license = "Apache-2.0/MIT"

[dependencies]
structopt = "0.2.13"
app_dirs = "1.2.1"
toml = "0.4.8"
serde = "1.0.80"
serde_derive = "1.0.80"
failure = "0.1.3"
chrono = "0.4.6"
