[package]
name = "marinara"
version = "0.2.1-alpha.0"
authors = ["Douglas Campos <qmx@qmx.me>"]
description = "a cli-based pomodoro timer"
homepage = "https://github.com/qmx/marinara"
license = "Apache-2.0/MIT"
edition = "2018"

[dependencies]
structopt = "0.2.15"
app_dirs = "1.2.1"
toml = "0.5.0"
serde = { version = "1.0.90", features = ["derive"] }
failure = "0.1.5"
chrono = "0.4.6"
